# lvgl-ttf-esp32

./: .gitmodules  README.md
components/ttfparser/: CMakeLists.txt
main/: CMakeLists.txt  main.c  main.cpp
main/display/hal/: lv_hal_st7789.c
main/display/hal/includes/: lv_hal_st7789.h
main/display/helper/includes/: font_view.hpp
main/resource/: font_subset.txt
